--- a/preamble.tex
+++ b/preamble.tex
@@ -52,6 +52,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
 
 \newcommand{\inp}[2]{\left\langle{#1},{#2}\right\rangle}
