Problem Set 4 (Questions)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -32,6 +32,9 @@
 \subfile{PSet3/pset3.tex}
 \newpage
 
+\subfile{PSet4/pset4.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
