--- a/preamble.tex
+++ b/preamble.tex
@@ -46,6 +46,9 @@
 \DeclareMathOperator{\spn}{span}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\im}{im}
+\DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\Inn}{Inn}
+\DeclareMathOperator{\Out}{Out}
 \setcounter{MaxMatrixCols}{20}
 
 \newcommand{\N}{\mathbb{N}}
