--- a/preamble.tex
+++ b/preamble.tex
@@ -41,7 +41,7 @@
 \deffootnotemark{\textsuperscript{\textup{[}\thefootnotemark\textup{]}}}
 \deffootnote[1.8em]{0em}{0em}{\textsuperscript{\thefootnote}}
 
-\usetikzlibrary{matrix}
+\usetikzlibrary{matrix,positioning,arrows}
 
 \DeclareMathOperator{\spn}{span}
 \DeclareMathOperator{\lcm}{lcm}
